test: agrega pruebas del modelo, logica funcional, flujo reactivo e ia